Integrar login/register con backend [LMS-62]